<resources>
    <string name="app_name">Pugrz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="list_view_tital" />
    <string name="add_item">add item</string>
    <string name="logout">log out</string>
    <string name="to_do_list_demo">to do list</string>
    <string name="file_api_demo">to do list demo</string>
    <string name="login_tital_small">So you can stop\n Playing with yourself</string>
    <string name="dsp_url">Disply Name</string>
    <string name="edit_id">Email ID</string>
    <string name="edit_pass">Password</string>
    <string name="btn_login">Login to Pugrz</string>
    <string name="login_tital_big">PUGRZ</string>
    <string name="loading_message">Connecting to Pugrz</string>
    <string name="id_null">ID is null</string>
    <string name="id_fname">Please enter First Name</string>
    <string name="id_lname">Please enter Last Name</string>
    <string name="pw_null">Password null</string>
    <string name="pw_null2">Passwords do not match</string>
    <string name="dsp_null">Display name null</string>
    <string name="task_blank">task blank</string>
    <string name="title_activity_profile">Profile</string>
<string name="google_maps_key">AIzaSyCNON70UCKwt9fRhETua5GhZAPGmrUqNKw</string>

    <string name="action_subscribe">Subscribe</string>
    <string name="action_unsubscribe">Unsubscribe</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_main">SoapBox</string>

    <string name="topic_list_header_subscriptions">Subscriptions</string>
    <string name="topic_list_header_other_topics">Other Topics</string>

    <string name="desc_powered_by_message">Powered by Magnet Message</string>
    <string name="desc_soapbox_logo">SoapBox logo</string>
    <string name="title_activity_topic_list">SoapBox</string>
    <string name="title_activity_topic_item_list">TopicItemListActivity</string>

    <string name="ic_back"><![CDATA[<]]></string>
    <string name="ic_cancel">Cancel</string>
    <string name="chat_me">Me - </string>

    <string name="dlg_signout_title">Sign Out</string>
    <string name="dlg_signout_message">You must be signed in to post to topics.  Continue to sign out?</string>
    <string name="dlg_signout_ok">OK</string>
    <string name="dlg_signout_cancel">Cancel</string>
    <string name="title_activity_topic_add">TopicAddActivity</string>

    <string name="error_topic_name_required">Topic name is required.</string>
    <string name="error_topic_already_exists">Topic already exists.</string>
    <string name="error_unable_to_delete_topic">Unable to delete topic: </string>
    <string name="dlg_delete_title">Delete topic?</string>
    <string name="dlg_delete_ok">OK</string>
    <string name="dlg_delete_cancel">Cancel</string>

    <string name="title_activity_message_list">MessageListActivity</string>
    <string name="title_activity_my">Quickstart</string>
    <string name="label_status">Status:</string>
    <string name="status_unknown">unknown</string>
    <string name="status_connected">connected</string>
    <string name="status_disconnected">disconnected</string>
    <string name="user_anonymously">anonymously</string>

    <string name="default_text_hello_world">Hello World!</string>
    <string name="message_hint">Message</string>
    <string name="event_disconnected">You have been disconnected.</string>
    <string name="reconnect">Reconnect</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect or the username is already taken</string>
    <string name="error_field_required">This field is required</string>
    <string name="sign_in_note">If you do not have an account you will be registered on first log in.</string>

    <string name="action_test_notification">Test Notification</string>
    <string name="action_test_notification_dialog">
<![CDATA[
This will trigger a rich notification that is bridged over to the Wear device.
\n\nNote that the first time this runs it can take 20-30 seconds to transfer
the image data (in practice, users wouldn\'t notice this as the notification
would be triggered automatically and only show up after the data was
transferred).
]]>
    </string>
    <string name="action_test_microapp">Test Micro App</string>
    <string name="action_test_microapp_dialog">
<![CDATA[
This will trigger a notification on Wear that lets you open up the full
wearable app. A few things to note:\n\n
• Ensure you have the wearable APK installed on your Wear device (debug builds
require you to install it manually)\n\n
• The first time this runs it can take 20-30 seconds to transfer the image
data (in practice, users wouldn\'t notice this as the notification would only
be triggered after the data was transferred)\n\n
• The notification priority is set to the recommended default value so it may
appear further down your stream
]]>
    </string>
    <string name="action_test_toggle_geofence">Toggle Geofence Trigger</string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_freinds">Freinds</string>
    <string name="nearby_attraction">nearby pugrz</string>
    <string name="action_map">map</string>
    <string name="empty_list">no dtat</string>
    <string name="title_activity_account_create">AccountCreate</string>
    <string name="title_activity_create_game">Create Game</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
         <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="regstring">Register</string>
    <string name="conf">Confirm Password</string>
    <string name="dspname">Display Name</string>
    <string name="createaccount">Create Account</string>
    <string name="action_search">Search</string>
    <string name="pgrrock">Pugrz Rocks</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_friends_list">FriendsList</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="title_activity_board_games">BoardGames</string>
    <string name="title_activity_game_feed">GameFeedActivity</string>
    <string name="title_activity_data_base">DataBaseActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="subscribe">Subcribe</string>
    <string name="unscbscribe">unscbscribe</string>
    <string name="clear">clear</string>
    <string name="register">register</string>
    <string name="loading">loading</string>
    <string name="error_timeout">error time out</string>
    <string name="error_auth_failure">error auth failure</string>
    <string name="error_network">error network</string>
    <string name="error_parser">error parser</string>

    <!-- Strings related to login -->




</resources>
