<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.furballwear.apps.pugrz.activities.AccountCreate"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/btnrectangel">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imageView4"
        android:src="@drawable/splash"
        android:scaleType="centerCrop"
        android:layout_centerInParent="true" />
<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">

    <TextView android:text="@string/createaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAlignment="gravity"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_gravity="center"
        android:textColor="#FF000000"
        android:gravity="top|center" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etemail"
        android:padding="15dp"
        android:hint="@string/edit_id" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etfirstname"
        android:padding="15dp"
        android:hint="@string/id_fname" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etlastname"
        android:padding="15dp"
        android:hint="@string/id_lname" /></android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etdisplayname"
       android:padding="15dp"
        android:hint="@string/dspname" />
</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/etpassword"
        android:padding="15dp"
        android:hint="@string/edit_pass" />
</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/etpassword2"
         android:hint="@string/conf"
        android:padding="15dp"
        android:imeOptions="actionDone" />
</android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:id="@+id/button_submit_create"
        android:background="@drawable/loginbtn"
        android:text="@string/regstring"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_margin="15dp"
       />



</LinearLayout>


</RelativeLayout>
