<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.furballwear.apps.pugrz.activities.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView3"
        android:src="@drawable/whitelogo"
        android:layout_centerInParent="true"
        android:contentDescription="@string/pgrrock"
        android:scaleType="fitXY" />
 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     android:id="@+id/loginview"
    android:background="@drawable/rounded"
     android:layout_alignParentBottom="false"
     android:layout_alignParentTop="false"
     android:gravity="center"
     android:layout_centerInParent="true"
     android:baselineAligned="true"
     android:layout_margin="10dp">
    <TextView
        android:id="@+id/text_view_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/login_tital_big"
        android:textSize="30sp"
        android:textStyle="bold"
        android:backgroundTintMode="src_atop"
        android:textAlignment="gravity"
       android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView_user_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tital_small"
        android:textAlignment="gravity"
        android:textStyle="bold"
        android:gravity="center_vertical|center|center_horizontal"
        android:autoText="true"
        android:layout_gravity="center"
        android:backgroundTintMode="src_atop" />


    <EditText
        android:id="@+id/edit_text_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_id"
        android:inputType="textEmailAddress"
        android:textAlignment="gravity"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp" />

   <EditText
        android:id="@+id/edit_text_user_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_pass"
        android:inputType="numberPassword|textPassword"
        android:textAlignment="gravity"
       android:layout_gravity="center_horizontal" />

    
    <Button
        android:id="@+id/button_submit_login"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/btn_login"
        android:background="@drawable/loginbtn"
        android:textStyle="bold"
        android:clickable="false"
        android:textAlignment="gravity"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="5dp"
        android:layout_gravity="center" />
</LinearLayout>

</RelativeLayout>
